# DECUP

./: CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  idf_component.yml
.github/workflows/: build.yml  release.yml  tests.yml
data/: Dateiaufbau_zsu.xls  DecUpFile_zsu.txt  DecoderUpdateDoku.doc  MX-Decoder_Soundload.xls  MX-Decoder_Soundload_alt.xls  MX31ZL_Preamble.csv  MX_Decoderupdate_VB6_Code.txt  MX_Soundload_VB6_Code.txt  Sound_Update_Log.zpp  Sound_und_CV_Protokoll.xls  ZPP-Datei.xls  ZSU_Dateiaufbau.xls
examples/: CMakeLists.txt
examples/esp32/: CMakeLists.txt  README.md
examples/esp32/main/: app_main.cpp  idf_component.yml
include/: rmt_decup_encoder.h
include/decup/: command.hpp  crc8.hpp  decup.hpp  exor.hpp  packet.hpp  timeouts.hpp  utility.hpp
src/: rmt_decup_encoder.c
tests/: CMakeLists.txt  crc8.cpp  decoder_id2packet_size.cpp
